# scrytui

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: main.rs
src/api/: client.rs
src/app/: display.rs  handler.rs  mod.rs
src/cli/: commands.rs
src/models/: card.rs
